--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -1,18 +1,18 @@
 # some information about you
-name: "John Doe"
-nickname: "John"
+name: "Pritam Raj"
+nickname: "Pritam"
 # greeting message before your name. it will default to "Hi! I am" if not provided
 greeting: "Hi, I am"
 image: "images/author/john.png"
 # give your some contact information. they will be used in the footer
 contactInfo:
-  email: "johndoe@example.com"
-  phone: "+0123456789"
+  email: "pritam.prp49@gmail.com"
+  phone: "+917610855778"
 
 # some summary about what you do
 summary:
-  - I am a Developer
-  - I am a Devops
-  - I love servers
-  - I work on open-source projects
-  - I love to work with some fun projects
+  - I am a Python Developer
+  - I am a Machine Learning Engineer
+  - I love programming
+  - I work at Dashclicks
+  - I love to work with ML & Cyber Security Projects
