--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -3,7 +3,7 @@ name: "Pritam Raj"
 nickname: "Pritam"
 # greeting message before your name. it will default to "Hi! I am" if not provided
 greeting: "Hi, I am"
-image: "images/author/john.png"
+image: "images/author/pritam.jpg"
 # give your some contact information. they will be used in the footer
 contactInfo:
   email: "pritam.prp49@gmail.com"
