--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -11,8 +11,8 @@ contactInfo:
 
 # some summary about what you do
 summary:
-  - I am a Python Developer
+  - I am a Python Full Stack Developer
   - I am a Machine Learning Engineer
   - I love programming
-  - I work at Dashclicks
+  - I Currently work at Dashclicks India
   - I love to work with ML & Cyber Security Projects
