--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -14,5 +14,5 @@ summary:
   - I am a Python Full Stack Developer
   - I am a Machine Learning Engineer
   - I love programming
-  - I Currently work at Dashclicks India
+  -  Currently working at Dashclicks India
   - I love to work with ML & Cyber Security Projects
